<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="key_text_1" translatable="false">1</string>
    <string name="key_text_2" translatable="false">2</string>
    <string name="key_text_3" translatable="false">3</string>
    <string name="key_text_4" translatable="false">4</string>
    <string name="key_text_5" translatable="false">5</string>
    <string name="key_text_6" translatable="false">6</string>
    <string name="key_text_7" translatable="false">7</string>
    <string name="key_text_8" translatable="false">8</string>
    <string name="key_text_9" translatable="false">9</string>
    <string name="key_text_0" translatable="false">0</string>
    <string name="key_text_dot" translatable="false">.</string>

</resources>